

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
select = B950

[aliases]
test = pytest

[coverage:run]
branch = True

[check-manifest]
ignore =
    .gitlab
    .gitlab/*
    .gitlab-ci.yml

[metadata]
license_file = LICENSE


[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning
